--- a/destinations/templates/create.html
+++ b/destinations/templates/create.html
@@ -4,9 +4,11 @@
 {% block title %}Create{% endblock title %}
 
 {% block content %}
+<div class="alert alert-light " role="alert">
 <form action="{% url 'destination-create' %}" method="POST" enctype="multipart/form-data">
   {% csrf_token %}
-  {{form.as_p}}
-  <input type="submit" value="Create">
+  {{form|crispy}}
+   <div class="text-center "><input type="submit" value="Create " class="btn"> </div>
 </form>
+</div>
 {% endblock content %}
